# internal/router/custom.go
@@ -32,6 +32,7 @@ func registerCustomRoutes(apiV1Router *gin.RouterGroup) {
 		pixezRouter.GET("/users", pixez.ListUsers)
 		pixezRouter.POST("/users", pixez.AddUser)
 		pixezRouter.GET("/users/:pixiv_user_id", pixez.GetUser)
+		pixezRouter.GET("/users/:pixiv_user_id/profile", pixez.GetUserProfile)
 		pixezRouter.POST("/users/:pixiv_user_id/refresh-token", pixez.RefreshUserToken)
 		pixezRouter.PUT("/users/:pixiv_user_id", pixez.UpsertUser)
 		pixezRouter.DELETE("/users/:pixiv_user_id", pixez.DeleteUser)
